templates/default/admin.css
#adminlogin {
	border-collapse: collapse;
	border-left: 1px solid silver;
	border-right: 1px solid silver;
	border-bottom: 1px solid silver;
	clear: both;
	margin: 0px auto 20px auto;
	width: 50%;
}
#adminlogin th {
	color: #EBD6AD;
	font-weight: bold;
	background-color: #336699;
	background-image: url(gfx/tableheadbg.gif);
	background-position: top;
	background-repeat: repeat-x;
	text-align: left;
	padding: 4px 6px 4px 6px;
	border-left: 1px solid silver;
	border-top: 1px solid silver;
	white-space: nowrap;
}
#adminlogin td {
	background-color: #EFEFEF;
	padding: 6px;
	text-align: left;
	border-left: 1px solid silver;
	border-top: 1px solid silver;
	vertical-align: middle;
}
#adminmenu {
	clear: both;
	float: left;
	margin: 0px 0px 20px 0px;
	width: 165px;
	background-color: #EFEFEF;
	padding: 6px 6px 0px 6px;
	text-align: left;
	border: 1px solid silver;
	line-height: 150%;
}
#adminmenu ul {
	list-style: none;
	font-weight: bold;
}
#adminmenu ul li ul {
	margin: 0px 0px 6px 6px;
	padding: 0px 0px 0px 6px;
	border-left: 2px solid silver;
	font-weight: normal;
}
#adminmenu ul li ul a {
	display: block;
}
#adminmenu ul li.selected, #adminmenu ul li.selected a {
	font-weight: bold;
	color: #555 !important;
	text-decoration: none !important;
}
h1#admintitle {
	color: #EBD6AD;
	font-weight: bold;
	font-size: 8pt;
	background-color: #336699;
	background-image: url(gfx/tableheadbg.gif);
	background-position: top;
	background-repeat: repeat-x;
	text-align: left;
	padding: 4px 6px 4px 6px;
	margin: 0px 0px 0px 195px;
	border: 1px solid silver;
}
#admincontent {
	background-color: #EFEFEF;
	padding: 10px 10px 0px 10px;
	margin: 0px 0px 20px 195px;
	text-align: left;
	border: 1px solid silver;
	border-top: 0px;
	line-height: 150%;
}
#admincontent h2, #admincontent p, #admincontent ul {
	margin: 0px 0px 10px 0px;
}
#admincontent h2 {
	font-size: 10pt;
	font-weight: bold;
	color: #333333;
	border-bottom: 1px solid silver;
}
#admincontent ul {
	margin-left: 25px;
}
#admincontent strong, #admincontent .strong {
	font-weight: normal;
	color: #BF0000;
}
#admincontent #resultset {
	font-size: 8pt;
}
#adminconfigcontent {
	list-style: none;
	margin-left: 0px !important;
	text-align: center;
	padding: 4px;
	border: 1px solid silver;
	background-color: #E8E8E8;
}
#adminconfigcontent li {
	display: inline;
	border-right: 2px solid silver;
	padding-right: 4px;
}
#adminconfigtable, #adminregulartable {
	border-collapse: collapse;
	border-left: 1px solid silver;
	border-right: 1px solid silver;
	border-bottom: 1px solid silver;
	margin: 0px 0px 10px 0px;
	width: 100%;
	clear: right;
}
#adminconfigtable th, #adminconfigtable td, #adminregulartable th, #adminregulartable td {
	border-left: 1px solid silver;
	border-top: 1px solid silver;
}
#adminconfigtable th, #adminregulartable th {
	font-weight: bold;
	padding: 4px 6px 4px 6px;
	background-image: url(gfx/topmenu_bg.png);
	background-repeat: repeat-x;
	background-color: #E8E8E8;
	color: #333333;
	text-align: left;
}
#adminconfigtable th {
	border-left: 5px solid silver;
}
#adminconfigtable td, #adminregulartable td {
	padding: 6px;
	text-align: left;
}
#adminconfigtable td.fieldtitle, #adminregulartable td.fieldtitle {
	font-weight: normal;
	text-align: left;
	width: 35%;
	background-color: #E8E8E8;
}
#adminconfigtable td.fieldtitle {
	width: 40%;
}
#adminregulartable th.action, #adminregulartable td.action {
	width: 1%;
	white-space: pre;
}
#adminregulartable td.action {
	background-color: #E8E8E8;
	text-align: center;
}
#adminconfigtable td.submit, #adminregulartable td.submit {
	font-weight: bold;
	text-align: center;
	background-color: #E8E8E8;
}
#admincontent p.submit {
	font-weight: bold;
	padding: 3px;
	background-color: #E8E8E8;
	text-align: center;
}
#admincontent textarea {
	font-size: 8pt !important;
}
#adminfunctionsmenu {
	list-style: none;
	margin-left: 0px !important;
}
#adminfunctionsmenu li {
	display: inline;
	border-left: 2px solid silver;
	padding-left: 4px;
}
#adminbottomfix {
	clear: both;
	height: 10px;
}

ul#adminsqlbuttons {
	list-style: none;
	margin: 0 0 5px 0;
	line-height: 250%;
}

ul#adminsqlbuttons li {
	display: inline;
	margin: 0 3px 0 0;
}

ul#adminsqlbuttons li a {
	background-color: #D8D8D8;
	padding: 2px;
	border: 1px solid silver;
	text-decoration: none;
}

